# amazon-s3-gst-plugin

./: CMakeLists.txt  README.md
src/: config.h.in  gsts3elements.c  gsts3multipartuploader.cpp  gsts3multipartuploader.h  gsts3sink.c  gsts3sink.h  gsts3uploader.c  gsts3uploader.h  gsts3uploaderconfig.h  gstsplitmuxsink.c
tools/share/cmake/: FindGStreamer.cmake  FindOrc.cmake
